<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_attractions"
        android:icon="@drawable/ic_local_activity_black_24dp"
        android:title="@string/title_attractions" />

    <item
        android:id="@+id/navigation_hotels"
        android:icon="@drawable/ic_hotel_black_24dp"
        android:title="@string/title_hotels" />

    <item
        android:id="@+id/navigation_food"
        android:icon="@drawable/ic_restaurant_black_24dp"
        android:title="@string/title_food" />

    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/title_shopping" />

</menu>
